Closed Bug 1220577 Opened 10 years ago Closed 10 years ago

[CID 1117022] leaked_storage: Variable shaStateBuf going out of scope leaks the storage it points to

Categories

(NSS :: Libraries, defect)

defect
Not set
normal

Tracking

(firefox45 affected)

RESOLVED FIXED
Tracking Status
firefox45 --- affected

People

(Reporter: franziskus, Assigned: franziskus)

References

(Blocks 1 open bug)

Details

(Keywords: coverity)

Attachments

(1 file)

We have to clean up shaStateBuf here.
Attachment #8681857 - Flags: review?(martin.thomson)
Comment on attachment 8681857 [details] [diff] [review] freeing shaStateBuf Review of attachment 8681857 [details] [diff] [review]: ----------------------------------------------------------------- https://hg.mozilla.org/projects/nss/rev/c4c7ed4e1799
Attachment #8681857 - Flags: review?(martin.thomson)
Attachment #8681857 - Flags: review+
Attachment #8681857 - Flags: checked-in+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → 3.22
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: