Bug 1220577 - [CID 1117022] leaked_storage: Variable shaStateBuf going out of scope leaks the storage it points to, r=mt